--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,26 @@
 .wrapper {
-    width: 1000px;
-    margin: 0 auto;
+	width: 1000px;
+	margin: 0 auto;
 }
 
 header a {
-    text-align: right;
+	text-align: right;
 }
 
-footer  {
+footer {
+	text-align: center;
+	background-color: rgb(250, 251, 252);
+	height: 80px;
+}
 
-    text-align: center;
+footer p {
+	margin: 0;
+}
+.logo {
+	height: 20px;
+	padding: 10px;
+}
+
+.logo a {
+	text-decoration: none;
 }
